[package]
name = "sundials-sys"
version = "0.1.1"
authors = ["Jason Dark <email@jkdark.com>"]
edition = "2018"
links = "sundials"

description = "A -sys crate for the SUNDIALS suite of ODE solvers"
categories = ["external-ffi-bindings", "science"]
repository = "https://github.com/jasondark/sundials-sys"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["ode", "solver", "sundials", "differential"]
exclude = ["**/*.pdf"]

[build-dependencies]
bindgen = "*"

[features]
default = ["cvode"]
arkode = []
cvode = []
cvodes = []
ida = []
idas = []
kinsol = []
nvecopenmp = []
nvecpthreads = []
nveccuda = []
